@@ -172,6 +172,9 @@ Trunk (unreleased changes)
     HADOOP-3851. Fix spelling mistake in FSNamesystemMetrics. (Steve Loughran 
     via omalley)
 
+    HADOOP-3780. Remove asynchronous resolution of network topology in the 
+    JobTracker (Amar Kamat via omalley)
+
   OPTIMIZATIONS
 
     HADOOP-3556. Removed lock contention in MD5Hash by changing the 
